@@ -288,6 +288,7 @@
 						--add-exports fx/org.unigrid.janus.model.service=ALL-UNNAMED
 						--add-exports fx/org.unigrid.janus.view.backing=ALL-UNNAMED
 						--add-exports fx/org.unigrid.janus.model.service.external=jersey.client
+						--add-exports fx/org.unigrid.janus.model.service.external=javafx.graphics
 						--add-exports fx/org.unigrid.janus.model.external=jersey.common
 						--add-exports fx/org.unigrid.janus.model.external=org.update4j
 						--add-exports fx/org.unigrid.janus.model.external=ALL-UNNAMED
@@ -297,6 +298,7 @@
 						--add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
 						--add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
 						--add-reads org.update4j=fx
+						--add-reads javafx.graphics=fx
 					</argLine>
 					<systemPropertyVariables>
 						<glass.platform>Monocle</glass.platform>
